authentication finished
